test/should_fail/TestReservedWord1.oj

@implementation TestReservedWord

- (void) test
{
	var self = "foo";
}

@end
